objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Ans_By__c</fullName>
        <label>Ans By</label>
        <referenceTo>Event_Attendee_Mapping__c</referenceTo>
        <relationshipName>Answers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ans__c</fullName>
        <label>Ans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Answer Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <referenceTo>Option__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>MMQuestion__c</referenceTo>
        <relationshipLabel>User_Answers</relationshipLabel>
        <relationshipName>Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Surveyor__c</fullName>
        <label>Surveyor</label>
        <referenceTo>Event_Attendee_Mapping__c</referenceTo>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User_Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>